# pipecat-ollama

./: MARCS_README.md  pyproject.toml
examples/quickstart/: bot.py  pyproject.toml  tts_server.py
